<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.pandy.cooltravel.Mainmenu">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout"
        android:layout_gravity="center|left"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:text="@string/createdTrips"
            android:id="@+id/createdtripsbtn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:text="@string/vehicle"
            android:id="@+id/vehicleBtn"
            android:layout_above="@+id/createdtripsbtn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:text="@string/title_activity_profile"
            android:id="@+id/menuprofilebtn"
            android:layout_alignTop="@+id/vehicleBtn"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_row="1"
            android:layout_column="2" />

        <Button
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:text="@string/myTrips"
            android:id="@+id/mytripsbtn"
            android:layout_below="@+id/gridLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="2"
            android:layout_column="2" />

        <Button
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:text="@string/taketrip"
            android:id="@+id/taketripbutton"
            android:layout_above="@+id/vehicleBtn"
            android:layout_alignRight="@+id/menuprofilebtn"
            android:layout_alignEnd="@+id/menuprofilebtn"
            android:layout_row="0"
            android:layout_column="2" />

        <Button
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:text="@string/maketrip"
            android:id="@+id/maketripbutton"
            android:layout_above="@+id/vehicleBtn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="0"
            android:layout_column="0" />
    </GridLayout>

</RelativeLayout>
